# catpoo

./: .editorconfig  .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile.am  README.md  bootstrap  composer.json  composer.phar  configure.ac  console notes  hosts.example  package.json  ruby-first-illustration.ai  site.yml
bootstrap/: INSTRUCTIONS.md  configure.yml  install.yml  preansible.sh
config/: catpoo-site.default  maestro_settings.txt  uv4l-raspicam.conf.default
docs/: Arduino planning.rtf  Cat Purr Detection | FFT- Fun with Fourier Transforms | Adafruit Learning System.webloc  Connect Raspberry Pi and Arduino with Serial USB Cable - OscarLiang.net.webloc  GPIO.md  Overall Architecture.odg  PARTS.md  Parts for Round 3.rtf  REQUIRED-PACKAGES.md  Serial format notes.rtf  Slate Grey Mirrored Acrylic Sheet.webloc  back-face-brain-storming.ai  bootscreen.xcf  box design.ai  brain bottom-recut.ai  brain final cut.ai  brain front back-recut.ai  brain sides-recut.ai  brain top-recut.ai  front-back.ai  front-face-brain-storming.ai  left-side-brainstorming.ai  logo final.ai  logo scratch.ai  more organic.ai  more-organic-cut.ai  play-left  play-right
group_vars/: all  all.yml  catpoos.yml
lib/: Makefile.am
motion/: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.in  motion.erl  motion_app.erl
motion/src/: Makefile.am  Serial.cpp  Serial.h  motion.cpp  motion.h
motion/thrift/: .note
playbooks/: INSTRUCTIONS.md  configure.yml  install.yml  (+2 more)
vision/thrift/: CatPooServer.cpp  CatPooServer.h  Makefile.am  server_constants.cpp  server_types.h
(+477 files in other folders)
