lib_LIBRARIES = libthriftcatpoo.a

libthriftcatpoo_a_SOURCES = CatPooMotion.cpp                 \
							CatPooMotion.h                   \
							CatPooMotion_server.skeleton.cpp \
							common_constants.cpp             \
							common_constants.h               \
							common_types.cpp                 \
							common_types.h                   \
							motion_constants.cpp             \ 
							motion_constants.h               \
							motion_types.cpp                 \
							motion_types.h

